-修复哆来咪BOSS战中可能因为特效过多而导致屏幕闪烁的BUG。
-Fixed an issue that EID of Parasitic Mushroom is incorrect.
-修复寄生蘑菇的EID描述不正确的BUG。
-Fixed an issue that Sake Bottle won't give curses.
-修复清酒瓶不会给予诅咒的BUG。

12.8.0-2023.1.20
-Added Byte String.
-加入了一串字节。

12.8.1-2023.1.24
-Fixed an issue that game will crash after game over.
-修复死亡时游戏闪退的BUG。

12.9.0-2023.2.11
-Added Mimic Tear.
-加入了仿身泪滴。

12.10.0-2023.2.12
-Added Cursed Blood and Rainbow Card.
-加入了诅咒之血和彩虹卡牌。
-Exchange Ticket is now Quality 4 and will be nerfed by Seija.
-交易所门票现在品质为4，并且会被正邪削弱。
-Fixed an issue that Judas + Birthright + Isaac's Last Wills have no effect when there's no pickups for transferring and player has not Book of Virtues.
-修复以撒的遗书在没有美德之书，或者可以转移的掉落物或道具时，犹大长子名分的增伤效果不生效的问题。
-Now Seija's default buff/nerf scheme for other mod's items can be disabled to implement the compatibilities.
-现在可以禁用正邪为某个MOD道具默认使用的增强/削弱方案，以实现MOD兼容。

12.10.1-2023.2.12
-Fixed an issue that Gambling D6 + Book of Virtues will cause error.
-修复赌博骰子+美德之书会使游戏出错的问题。

12.10.2-2023.2.12
-Added small icon for Cursed Blood and Rainbow Card.
-为诅咒之血和彩虹卡牌加入了小图标。
-Seija + Cursed Blood no longer heals red hearts when taking fire damage.
-正邪+诅咒之血在受到火焰伤害时不再治愈红心。

12.10.3-2023.2.12
-Added Challenge "No Blood for Curse".
-加入了挑战“不为诅咒流血”。
-Black Candle will now remove Cursed Blood's instantly death effect.
-黑蜡烛现在会取消诅咒之血的致死效果。

12.10.4-2023.2.13
-Added Challenge "No Blood for Curse II".
-加入了挑战“不为诅咒流血II”。
-Book of Years, Yamawaro's Crate and Exchange Ticket now has tag "No Challenge".
-岁月史书、山童的木箱和交易所门票现在有了标签“非挑战”。

12.10.5-2023.2.14
-Added Challenge "Who's that item?".
-加入了挑战“我是谁？”。
-Symmetry OCD now spawns asymmetrical collectibles from the item pool after the item pool is empty, instead of symmetrical items from treasure room pool.
-对称强迫症现在会在道具池空之后生成该道具池的不对称道具，而非宝箱房的对称道具。

12.10.6-2023.2.18
-Fixed an issue that the game will crash after Seija picked up Knife Piece 2 during Mine Escapes.
-修复正邪在矿洞逃亡中拿起菜刀部件2时，游戏会崩溃的BUG。